keywords: 'new features, release notes, enhancements, what"s new' 
summary: NetApp offre funzionalità nuove e migliorate in ogni release dei servizi Keystone STaaS. 
---
= Novità di Keystone STaaS
:hardbreaks:
:allow-uri-read: 
:nofooter: 
:icons: font
:linkattrs: 
:imagesdir: ./media/


[role="lead"]
Scopri le ultime funzionalità e i miglioramenti dei servizi Keystone STaaS.



== 24 novembre 2025

Nuovi miglioramenti nella dashboard Keystone nella NetApp Console:



=== ID di tracciamento per abbonamenti con copertura gap

Nella casella di notifica *Completa la tua copertura* in *Monitoraggio > Monitor avvisi*, ogni abbonamento ora visualizza il proprio ID di monitoraggio accanto al numero di abbonamento.



== 10 novembre 2025

Nuovi miglioramenti nella dashboard Keystone nella NetApp Console:



=== Completa la casella di notifica della tua copertura

La scheda *Monitoraggio avvisi* nella pagina *Monitoraggio* include una casella di notifica *Completa la copertura* che appare quando ci sono lacune nella copertura.  In questa casella sono elencati gli abbonamenti per i quali mancano i monitor di capacità o scadenza e i monitor senza abbonamenti.  È possibile colmare le lacune aggiungendo abbonamenti ai monitor esistenti, creando nuovi monitor o eliminando quelli non utilizzati. Per saperne di più, fare riferimento a link:https://docs.netapp.com/us-en/keystone-staas/integrations/monitoring-alert-monitors.html#manage-coverage-gaps["Gestire le lacune di copertura per i monitor di allerta"].



== 13 ottobre 2025

Nuovi miglioramenti nella dashboard Keystone nella NetApp Console:



=== Colonna di override della policy QoS nella scheda Risorse

La scheda *Volumi nei cluster* all'interno della scheda *Risorse* ora include una colonna *Override policy QoS* che indica se le regole QoS vengono ignorate per i volumi di backup e mirror, visualizzando *true* (regole ignorate), *false* (regole applicate) o *N/D* (per i volumi mirror).

