@@ -355,7 +355,6 @@
   <block id="9a87285999e76f01064e09d4163dacb4" category="list-text">Nella _fase 1_ della procedura guidata *Deploy OVF Template*, fare clic su *Select and OVF template* (Seleziona e modello OVF) per selezionare il modello scaricato<block ref="10e7fe8d7233c9952d9060893052d234" prefix=" " category="inline-code"></block> file.</block>
   <block id="eb2f786d0356dd1cd28f20f376d5da2b" category="list-text">Al _passaggio 2_, specificare il nome della macchina virtuale e selezionare la cartella della macchina virtuale.</block>
   <block id="ef93bcb8e06b73273019082b41d87115" category="list-text">Nel _passaggio 3_, specificare la risorsa di calcolo richiesta per l'esecuzione della macchina virtuale.</block>
-  <block id="41466009ab38ed0e1dbd7f2358fa3825" category="list-text">Fare clic sul collegamento *Publisher* per scaricare il certificato di digest completo della firma.</block>
   <block id="09ecce71a847e29076b9c49beb846dae" category="list-text">Nella _fase 5_ della procedura guidata *Deploy OVF Template*, specificare la posizione in cui memorizzare la macchina virtuale.</block>
   <block id="3a1e055c606dddb7ffa7ea4aa739f762" category="list-text">Nel _passaggio 6_, selezionare la rete di destinazione per la macchina virtuale da utilizzare.</block>
   <block id="8cd29cf88dddb3b6287a9351d1b4c067" category="list-text">Nella sezione _fase 7 personalizzare il modello_, specificare l'indirizzo di rete e la password iniziali per l'account utente amministratore.</block>
@@ -602,10 +601,6 @@
   <block id="85701aafc47f53d769db3988637e595c" category="admonition">Un grafico vuoto indica che non sono disponibili dati nell'ambiente in quel punto di raccolta dati.</block>
   <block id="c2e2fce3a995f59900d7afbbe58683f5" category="inline-link">questo link</block>
   <block id="7656f92cecd653f72ca596d6def21867" category="list-text">Scaricare il file OVA da<block ref="6a1066e952a937beb3c2b32013fd7738" category="inline-link-rx"></block> E memorizzarlo sul sistema VMware vSphere.</block>
-  <block id="6948cdf9e6c5bdc7d80925f15f8f873e" category="list-text">Al _passaggio 4: Verifica dei dettagli_, verifica la correttezza e l'autenticità del file OVA.
-Le versioni di vCenter precedenti al 7.0u2 non sono in grado di verificare automaticamente l'autenticità del certificato con firma del codice. VCenter 7.0u2 e versioni successive possono eseguire le verifiche; tuttavia, a tale scopo, l'autorità di certificazione della firma deve essere aggiunta a vCenter. Seguire queste istruzioni per la versione di vCenter in uso:</block>
-  <block id="8b6cfff06473c4cd5cde3fa4ab929f0a" category="paragraph">VCenter convalida l'integrità del contenuto del file OVA e fornisce un digest valido per la firma del codice per i file contenuti nel file OVA. Tuttavia, non convalida l'autenticità del certificato con firma del codice. Per verificare l'integrità, devi scaricare il certificato digest completo della firma e verificarlo rispetto al certificato pubblico pubblicato da Keystone.</block>
-  <block id="45c3e42547d79b15a504fc354a5ea227" category="paragraph">7.0u2 e le versioni successive di vCenter sono in grado di validare l'integrità del contenuto del file OVA e l'autenticità del certificato di firma del codice, quando viene fornito un digest valido per la firma del codice. L'archivio root trust vCenter contiene solo certificati VMware. NetApp utilizza Entrust come autorità di certificazione e tali certificati devono essere aggiunti all'archivio di fiducia di vCenter.</block>
   <block id="6c92285fa6d3e827b198d120ea3ac674" category="inline-link">qui</block>
   <block id="f35abf22d965c5c506fba6f9273a2895" category="list-text">Seguire la procedura descritta in<block ref="b5a4b64b2aa505bd7c11f79b8a9f458d" prefix=" " category="inline-code"></block> Sezione di questo articolo della Knowledge base (KB):<block ref="2e578ca4f24dfc2cfe15357800b939d4" category="inline-link-rx"></block>.</block>
   <block id="6db4d1fb4f168710dad43e921e4fec52" category="inline-image-macro">OVA UI che visualizza un certificato verificato</block>
@@ -613,8 +608,6 @@ Le versioni di vCenter precedenti al 7.0u2 non sono in grado di verificare autom
   <block id="cf3a2d2c139bf5c9cc87fe714bfff3b1" category="paragraph">Tenere presente quanto segue:</block>
   <block id="89daf59b9c591b51911d438bdad9f762" category="list-text">*Usage Status* (Stato utilizzo): Visualizza l'indicatore di utilizzo per indicare se il consumo rientra o supera il limite di abbonamento. È possibile ordinare l'elenco in base a questa colonna se si desidera visualizzare i record di consumo più elevato.</block>
   <block id="6645e0ebb53d4b6e68be7936af3a8039" category="inline-link">AutoSupport</block>
-  <block id="ed55999d50b7451fbe4281de85f01c45" category="example-title">VCenter 7.0u1 e versioni precedenti: Ulteriori informazioni</block>
-  <block id="ae33212e0f96fd19173ab021f7909861" category="example-title">VCenter 7.0u2 e versioni successive: Ulteriori informazioni</block>
   <block id="ee5ca5bbfae8b59d25890e341fb270f9" category="example-title">&lt;strong&gt; - dati raccolti per ONTAP: Scopri la tecnologia &lt;/strong&gt;</block>
   <block id="c1180c8c32ead64506dbcd62aa47c4c9" category="example-title">&lt;strong&gt; - dati raccolti per ONTAP: Scopri la tecnologia &lt;/strong&gt;</block>
   <block id="fb4c693ae1537fcd9bba0f68cbeef17b" category="example-title">Rimozione di un numero di elementi &lt;strong&gt; in seguito alla limitazione dell'accesso ai dati privati: Scopri il &lt;/strong&gt; più discontinuo</block>
@@ -1185,7 +1178,6 @@ Ecco un esempio:</block>
   <block id="e481e00ab54faed62b9dea98ed860aea" category="inline-image-macro">Schermata dell'interfaccia utente per visualizzare i criteri AQoS creati</block>
   <block id="43b019fa12d041b6c5cbfe89c5f52205" category="paragraph"><block ref="43b019fa12d041b6c5cbfe89c5f52205" category="inline-image-macro-rx" type="image"></block></block>
   <block id="86e86c82820734a68c07adc56b6390a2" category="inline-image-macro">Schermata TUI per visualizzare il messaggio di errore per la creazione dei criteri</block>
-  <block id="1b787eed58abedc58337d9fef037fb67" category="list-text">Sistema operativo: Server VMware vCenter e ESXi 6.7 o versione successiva</block>
   <block id="f7e13857abd03bc318b89fe886669d7d" category="paragraph">Il campo *da data* per selezionare l'intervallo di date visualizza una data futura per impostazione predefinita quando si passa alla scheda *Trend consumi*.</block>
   <block id="443c63f2975d5902a80f1597e417d9f2" category="paragraph">4 settembre 2024</block>
   <block id="3564049af4b6d8549eeccf2c18fc9bb7" category="summary">Completare alcune attività di configurazione per consentire a Keystone Collector di raccogliere dati di utilizzo in un ambiente che non dispone di accesso a Internet, noto anche come _sito scuro_ o _modalità privata_.</block>
@@ -1287,7 +1279,6 @@ Ecco un esempio:</block>
   <block id="ddedaabf1afb461a6e3d2fe1320dcca0" category="summary">Prima di installare Keystone Collector in un ambiente senza accesso a Internet, noto anche come _dark site_ o _private mode_, assicurarsi che i sistemi siano preparati con il software necessario e soddisfino tutti i prerequisiti richiesti.</block>
   <block id="fd7fae83015d688b86a7ec1ed256864e" category="doc">Preparare l'installazione in modalità privata</block>
   <block id="2b9854b0330b42530e0aaf8e893e2f28" category="section-title">Requisiti di VMware vSphere</block>
-  <block id="4b78be970b5500221a819608df5616e7" category="list-text">Sistema operativo: Server VMware vCenter e ESXi 6,7 o versioni successive</block>
   <block id="0a07fd95ca9bf6935ce5e61609730be6" category="list-text">RAM: 2 GB</block>
   <block id="c53de6b17f1d8da5e4d60aca127be380" category="section-title">Requisiti per Linux</block>
   <block id="6adf0487ff5b4dadf30c70a5107314fc" category="list-text">Core: 2 CPU</block>
@@ -2423,8 +2414,6 @@ Ecco un esempio:</block>
   <block id="b5e09b8913194b721a7e21626585dfc5" category="list-text">Verificare che sia stato importato il certificato pubblico corretto controllando l'impronta digitale per Keystone Billing Platform nel database RPM:<block ref="46ce6ee7c7afe96ac26dd093842fe062" prefix=" " category="inline-code"></block> L'impronta digitale corretta si presenta così:<block ref="b91be68b3b67e632293886e3790eccc7" prefix=" " category="inline-code"></block></block>
   <block id="f4baeef0e68eefa8ecbde2db1c9bb6af" category="list-text">Scarica il<block ref="5bec9e04971ed49ee2b3c939afa7a801" prefix=" " category="inline-code"></block> file:<block ref="55192ff2cd286fc1b545da5fb86c86fb" prefix=" " category="inline-code"></block></block>
   <block id="859d80b97dc3be93d17073cb53fd1183" category="list-text">Verificare l'autenticità del file:<block ref="50a551e75e87c897a8ad2128c42de747" prefix=" " category="inline-code"></block> La firma di un file autentico si presenta così:<block ref="ae3578a86bb737e9e2439ece85303ecb" prefix=" " category="inline-code"></block></block>
-  <block id="1eba34a29908de527656c195c6a4418a" category="list-text">Scarica il certificato pubblico _Keystone Billing_ da<block ref="5520f333fe3958930d4ca351e896a12f" category="inline-link-rx"></block>.</block>
-  <block id="8dd9e9a8650be62b5350b1743ec0c25a" category="list-text">Verificare l'autenticità del certificato di firma OVA rispetto al certificato pubblico utilizzando OpenSSL:<block ref="f41dec976ad8e65c3e38fceba0104101" prefix=" " category="inline-code"></block></block>
   <block id="b96ad4ab266c25b5492620bb2563d5d0" category="list-text">Scarica il certificato CA di firma del codice da Sectigo<block ref="7342f89b7e38eb427d641531b8da4ba6" category="inline-link-rx"></block>.</block>
   <block id="5107c2f981fc9d221af2aedb4d9c3f10" category="paragraph">Una volta convalidata l'integrità e l'autenticità del Keystone Collector OVA, è possibile visualizzare il testo<block ref="2e5f0dac7b8d485649c8f829e8ba09da" prefix=" " category="inline-code"></block> con l'editore. <block ref="4bb910ce06804868c88e19dd6ff9e83c" category="inline-image-macro-rx" type="image"></block></block>
   <block id="f4d3f733b36c05e3bcdf4287f293b20f" category="paragraph">Se il cluster è in una configurazione MetroCluster , eseguire questo comando:</block>
@@ -2485,4 +2474,16 @@ Ecco un esempio:</block>
   <block id="fa37f1bdab27c9577ff178edf4ff4fef" category="admonition">La scheda *Report* non è attualmente disponibile per gli abbonamenti Keystone .</block>
   <block id="2193640916b96caede95ed8f42c339e8" category="paragraph"><block ref="2193640916b96caede95ed8f42c339e8" category="inline-image-macro-rx" type="image"></block></block>
   <block id="3a51c5c35df88316b8d012c010e340f7" category="section-title">24 novembre 2025</block>
+  <block id="236430e108e8394ac19913076b10fb55" category="doc">Etichetta di capacità di burst accumulata rinominata</block>
+  <block id="73ba7647571e18c30e8b5b930b7d7ffb" category="paragraph">L'etichetta *Capacità burst accumulata* viene rinominata in *Burst accumulato*.</block>
+  <block id="a6145fbfb28ae332bb61854cc43b2999" category="list-text">Sistema operativo: VMware vCenter Server ed ESXi 8.0 o versioni successive</block>
+  <block id="19c50fb6e1d8179976234d4afbeaf824" category="list-text">Nel _Passaggio 4: Verifica i dettagli_, verifica la correttezza e l'autenticità del file OVA.</block>
+  <block id="89982b0af4c1ad3b86da7a82b021fed7" category="paragraph">L'archivio attendibilità radice di vCenter contiene solo certificati VMware. NetApp utilizza Entrust come autorità di certificazione e tali certificati devono essere aggiunti all'archivio attendibile di vCenter.</block>
+  <block id="6421324a362bee91e5fee16704e6b0e5" category="admonition">Per le versioni vCenter 7.x e precedenti, è necessario aggiornare vCenter ed ESXi alla versione 8.0 o successiva. Le versioni precedenti non sono più supportate.</block>
+  <block id="21f65ffde9511843c6e3b86b7a0de865" category="list-text">Sistema operativo: VMware vCenter Server ed ESXi 8.0 o versioni successive</block>
+  <block id="effa0f06c02c1da56e0eada86a5982ec" category="list-text">Le opzioni del menu a discesa *Visualizza* dipendono dalle piattaforme di abbonamento Keystone . *Volumi in cluster* e *Nodi in cluster* sono disponibili per ONTAP. Per StorageGRID, il menu a discesa *Visualizza* non è disponibile, la tabella *Nodi nelle griglie* viene visualizzata automaticamente. Se il tuo abbonamento include entrambe le piattaforme, saranno disponibili tutte e tre le opzioni.</block>
+  <block id="a71fbcfaa67815b8c0edea5059cb96fb" category="admonition">La pagina *Risorse* visualizza le schede in base alle piattaforme associate ai tuoi abbonamenti Keystone . Per ONTAP sono disponibili sia le schede *Nodi nei cluster* che *Volumi nei cluster*. Per StorageGRID, la tabella *Nodi nelle griglie* viene visualizzata direttamente senza una selezione tramite scheda. Se gli abbonamenti includono entrambe le piattaforme, saranno disponibili tutte e tre le schede.</block>
+  <block id="7a29351a5aff62fec009044b13aad77f" category="paragraph">Gli abbonamenti visualizzano erroneamente lo stato *Sopra il limite di burst* nella dashboard Digital Advisor nonostante il consumo rientri nei limiti di burst consentiti.</block>
+  <block id="81899b5a6230dd4cf7e0bff4dbc71dfb" category="paragraph">2025-12-08</block>
+  <block id="2727f68982ff25e8b3c57e026120561d" category="section-title">08 dicembre 2025</block>
 </blocks>
